src/exptex/exptex2Parser.java
// Generated from exptex2.g4 by ANTLR 4.x
package exptex;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class exptex2Parser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__13=1, T__12=2, T__11=3, T__10=4, T__9=5, T__8=6, T__7=7, T__6=8, T__5=9, 
		T__4=10, T__3=11, T__2=12, T__1=13, T__0=14, SUM=15, FOR=16, CHOOSE=17, 
		FROM=18, PROD=19, TO=20, LIMIT=21, AS=22, PROB=23, OVER=24, OF=25, MOD=26, 
		XOR=27, IN=28, AND=29, OR=30, ID=31, RM_ID=32, SF_ID=33, BB_ID=34, SPACE=35, 
		CR=36, NEWLINE=37, NUM=38, STRING=39, DIVDIV=40, DIV=41, MATH_SYMBOL=42, 
		DOT_DOT=43;
	public static final String[] tokenNames = {
		"<INVALID>", "'''", "']'", "'%'", "'^'", "'{'", "')'", "'_'", "'+'", "'-'", 
		"'['", "'*'", "'('", "'}'", "'|'", "'sum'", "'for'", "'choose'", "'from'", 
		"'prod'", "'to'", "'limit'", "'as'", "'prob'", "'over'", "'of'", "'mod'", 
		"'xor'", "'in'", "'and'", "'or'", "ID", "RM_ID", "SF_ID", "BB_ID", "SPACE", 
		"CR", "NEWLINE", "NUM", "STRING", "'//'", "'/'", "MATH_SYMBOL", "'..'"
	};
	public static final int
		RULE_math_symbol = 0, RULE_entity = 1, RULE_expr = 2, RULE_stuff = 3, 
		RULE_minus_expr = 4, RULE_align = 5, RULE_comprehension = 6, RULE_atom = 7, 
		RULE_choose = 8, RULE_sum = 9, RULE_prod = 10, RULE_prob = 11, RULE_lim = 12, 
		RULE_start = 13;
	public static final String[] ruleNames = {
		"math_symbol", "entity", "expr", "stuff", "minus_expr", "align", "comprehension", 
		"atom", "choose", "sum", "prod", "prob", "lim", "start"
	};

	@Override
	public String getGrammarFileName() { return "exptex2.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


	boolean notminus() {return !"-".equals(_input.LT(1).getText());}

	public exptex2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Math_symbolContext extends ParserRuleContext {
		public TerminalNode MATH_SYMBOL() { return getToken(exptex2Parser.MATH_SYMBOL, 0); }
		public TerminalNode IN() { return getToken(exptex2Parser.IN, 0); }
		public Math_symbolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_math_symbol; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).enterMath_symbol(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).exitMath_symbol(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exptex2Visitor ) return ((exptex2Visitor<? extends T>)visitor).visitMath_symbol(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Math_symbolContext math_symbol() throws RecognitionException {
		Math_symbolContext _localctx = new Math_symbolContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_math_symbol);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			_la = _input.LA(1);
			if ( !(_la==IN || _la==MATH_SYMBOL) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntityContext extends ParserRuleContext {
		public EntityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity; }
	 
		public EntityContext() { }
		public void copyFrom(EntityContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Entity_stringContext extends EntityContext {
		public TerminalNode STRING() { return getToken(exptex2Parser.STRING, 0); }
		public Entity_stringContext(EntityContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).enterEntity_string(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).exitEntity_string(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exptex2Visitor ) return ((exptex2Visitor<? extends T>)visitor).visitEntity_string(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Entity_rm_idContext extends EntityContext {
		public TerminalNode RM_ID() { return getToken(exptex2Parser.RM_ID, 0); }
		public Entity_rm_idContext(EntityContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).enterEntity_rm_id(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).exitEntity_rm_id(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exptex2Visitor ) return ((exptex2Visitor<? extends T>)visitor).visitEntity_rm_id(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Entity_sf_idContext extends EntityContext {
		public TerminalNode SF_ID() { return getToken(exptex2Parser.SF_ID, 0); }
		public Entity_sf_idContext(EntityContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).enterEntity_sf_id(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).exitEntity_sf_id(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exptex2Visitor ) return ((exptex2Visitor<? extends T>)visitor).visitEntity_sf_id(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Entity_bb_idContext extends EntityContext {
		public TerminalNode BB_ID() { return getToken(exptex2Parser.BB_ID, 0); }
		public Entity_bb_idContext(EntityContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).enterEntity_bb_id(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).exitEntity_bb_id(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exptex2Visitor ) return ((exptex2Visitor<? extends T>)visitor).visitEntity_bb_id(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Entity_idContext extends EntityContext {
		public TerminalNode ID() { return getToken(exptex2Parser.ID, 0); }
		public Entity_idContext(EntityContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).enterEntity_id(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).exitEntity_id(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exptex2Visitor ) return ((exptex2Visitor<? extends T>)visitor).visitEntity_id(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Entity_numContext extends EntityContext {
		public TerminalNode NUM() { return getToken(exptex2Parser.NUM, 0); }
		public Entity_numContext(EntityContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).enterEntity_num(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).exitEntity_num(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exptex2Visitor ) return ((exptex2Visitor<? extends T>)visitor).visitEntity_num(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntityContext entity() throws RecognitionException {
		EntityContext _localctx = new EntityContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_entity);
		try {
			setState(36);
			switch (_input.LA(1)) {
			case ID:
				_localctx = new Entity_idContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(30); match(ID);
				}
				break;
			case NUM:
				_localctx = new Entity_numContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(31); match(NUM);
				}
				break;
			case STRING:
				_localctx = new Entity_stringContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(32); match(STRING);
				}
				break;
			case RM_ID:
				_localctx = new Entity_rm_idContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(33); match(RM_ID);
				}
				break;
			case SF_ID:
				_localctx = new Entity_sf_idContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(34); match(SF_ID);
				}
				break;
			case BB_ID:
				_localctx = new Entity_bb_idContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(35); match(BB_ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public int _p;
		public ExprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ExprContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
			this._p = ctx._p;
		}
	}
	public static class Expr_impl_multContext extends ExprContext {
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public Expr_impl_multContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).enterExpr_impl_mult(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).exitExpr_impl_mult(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exptex2Visitor ) return ((exptex2Visitor<? extends T>)visitor).visitExpr_impl_mult(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expr_arrayContext extends ExprContext {
		public StuffContext stuff() {
			return getRuleContext(StuffContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Expr_arrayContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).enterExpr_array(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).exitExpr_array(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exptex2Visitor ) return ((exptex2Visitor<? extends T>)visitor).visitExpr_array(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expr_primeContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Expr_primeContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).enterExpr_prime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).exitExpr_prime(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exptex2Visitor ) return ((exptex2Visitor<? extends T>)visitor).visitExpr_prime(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expr_funcContext extends ExprContext {
		public StuffContext stuff() {
			return getRuleContext(StuffContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Expr_funcContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).enterExpr_func(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).exitExpr_func(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exptex2Visitor ) return ((exptex2Visitor<? extends T>)visitor).visitExpr_func(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expr_binopContext extends ExprContext {
		public Token op;
		public TerminalNode XOR() { return getToken(exptex2Parser.XOR, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public Expr_binopContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).enterExpr_binop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).exitExpr_binop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exptex2Visitor ) return ((exptex2Visitor<? extends T>)visitor).visitExpr_binop(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expr_negateContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Expr_negateContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).enterExpr_negate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).exitExpr_negate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exptex2Visitor ) return ((exptex2Visitor<? extends T>)visitor).visitExpr_negate(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expr_comprehendContext extends ExprContext {
		public ComprehensionContext comprehension() {
			return getRuleContext(ComprehensionContext.class,0);
		}
		public Expr_comprehendContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).enterExpr_comprehend(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).exitExpr_comprehend(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exptex2Visitor ) return ((exptex2Visitor<? extends T>)visitor).visitExpr_comprehend(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expr_atomContext extends ExprContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public Expr_atomContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).enterExpr_atom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).exitExpr_atom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exptex2Visitor ) return ((exptex2Visitor<? extends T>)visitor).visitExpr_atom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState, _p);
		ExprContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, RULE_expr);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			switch (_input.LA(1)) {
			case 9:
				{
				_localctx = new Expr_negateContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(39); match(9);
				setState(40); expr(11);
				}
				break;
			case SUM:
			case PROD:
			case LIMIT:
			case PROB:
				{
				_localctx = new Expr_comprehendContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(41); comprehension();
				}
				break;
			case 5:
			case 12:
			case ID:
			case RM_ID:
			case SF_ID:
			case BB_ID:
			case NUM:
			case STRING:
				{
				_localctx = new Expr_atomContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(42); atom();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(77);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(75);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new Expr_binopContext(new ExprContext(_parentctx, _parentState, _p));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(45);
						if (!(10 >= _localctx._p)) throw new FailedPredicateException(this, "10 >= $_p");
						setState(46);
						((Expr_binopContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==4 || _la==7) ) {
							((Expr_binopContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						consume();
						setState(47); expr(11);
						}
						break;
					case 2:
						{
						_localctx = new Expr_binopContext(new ExprContext(_parentctx, _parentState, _p));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(48);
						if (!(6 >= _localctx._p)) throw new FailedPredicateException(this, "6 >= $_p");
						setState(49); ((Expr_binopContext)_localctx).op = match(DIVDIV);
						setState(50); expr(7);
						}
						break;
					case 3:
						{
						_localctx = new Expr_binopContext(new ExprContext(_parentctx, _parentState, _p));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(51);
						if (!(5 >= _localctx._p)) throw new FailedPredicateException(this, "5 >= $_p");
						setState(52); ((Expr_binopContext)_localctx).op = match(DIV);
						setState(53); expr(6);
						}
						break;
					case 4:
						{
						_localctx = new Expr_binopContext(new ExprContext(_parentctx, _parentState, _p));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(54);
						if (!(4 >= _localctx._p)) throw new FailedPredicateException(this, "4 >= $_p");
						setState(55);
						((Expr_binopContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==3 || _la==11) ) {
							((Expr_binopContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						consume();
						setState(56); expr(5);
						}
						break;
					case 5:
						{
						_localctx = new Expr_binopContext(new ExprContext(_parentctx, _parentState, _p));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(57);
						if (!(3 >= _localctx._p)) throw new FailedPredicateException(this, "3 >= $_p");
						setState(58);
						((Expr_binopContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 8) | (1L << 9) | (1L << 14) | (1L << XOR))) != 0)) ) {
							((Expr_binopContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						consume();
						setState(59); expr(4);
						}
						break;
					case 6:
						{
						_localctx = new Expr_primeContext(new ExprContext(_parentctx, _parentState, _p));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(60);
						if (!(12 >= _localctx._p)) throw new FailedPredicateException(this, "12 >= $_p");
						setState(61); match(1);
						}
						break;
					case 7:
						{
						_localctx = new Expr_funcContext(new ExprContext(_parentctx, _parentState, _p));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(62);
						if (!(9 >= _localctx._p)) throw new FailedPredicateException(this, "9 >= $_p");
						setState(63); match(12);
						setState(64); stuff();
						setState(65); match(6);
						}
						break;
					case 8:
						{
						_localctx = new Expr_arrayContext(new ExprContext(_parentctx, _parentState, _p));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(67);
						if (!(8 >= _localctx._p)) throw new FailedPredicateException(this, "8 >= $_p");
						setState(68); match(10);
						setState(69); stuff();
						setState(70); match(2);
						}
						break;
					case 9:
						{
						_localctx = new Expr_impl_multContext(new ExprContext(_parentctx, _parentState, _p));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(72);
						if (!(7 >= _localctx._p)) throw new FailedPredicateException(this, "7 >= $_p");
						setState(73);
						if (!(notminus())) throw new FailedPredicateException(this, "notminus()");
						setState(74); expr(8);
						}
						break;
					}
					} 
				}
				setState(79);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class StuffContext extends ParserRuleContext {
		public List<Minus_exprContext> minus_expr() {
			return getRuleContexts(Minus_exprContext.class);
		}
		public Math_symbolContext math_symbol(int i) {
			return getRuleContext(Math_symbolContext.class,i);
		}
		public Minus_exprContext minus_expr(int i) {
			return getRuleContext(Minus_exprContext.class,i);
		}
		public List<Math_symbolContext> math_symbol() {
			return getRuleContexts(Math_symbolContext.class);
		}
		public StuffContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stuff; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).enterStuff(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptex2Listener ) ((exptex2Listener)listener).exitStuff(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exptex2Visitor ) return ((exptex2Visitor<? extends T>)visitor).visitStuff(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StuffContext stuff() throws RecognitionException {
		StuffContext _localctx = new StuffContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stuff);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(80); math_symbol();
					}
					} 
				}
				setState(85);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(105);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(86); minus_expr();
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(88); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(87); math_symbol();
							}
							}
							setState(90); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==IN || _la==MATH_SYMBOL );
						setState(92); minus_expr();
						}
						} 
					}
					setState(98);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				setState(102);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(99); math_symbol();
						}
						} 
					}
					setState(104);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
